Your commit message here

--- a/src/components/Faq/Faq/FaqSimple.module.css
+++ b/src/components/Faq/Faq/FaqSimple.module.css
@@ -15,7 +15,7 @@
     font-size: 52px;
     font-family: Greycliff CF, var(--mantine-font-family);
     margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
-    
+    padding-left: 596px;
   }
   
   .item {
