--- a/src/components/Appy/Form/style.css
+++ b/src/components/Appy/Form/style.css
@@ -22,4 +22,12 @@
     padding-left: 61px;
     padding-top: 10px;
   }
+  @media (max-width: 767px) {
+    
+    .form-container {
+      height: 100%;
+      width: 100%;
+      padding-left: 20px;
   
+  }
+}
